# FFmpeg

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/demo/ff86/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: player.cpp
app/src/main/java/com/demo/ff86/: MainActivity.java  Player.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/demo/ff86/: ExampleUnitTest.java
armyvideo/: build.gradle
armyvideo/src/androidTest/java/com/demo/armyvideo/: ExampleInstrumentedTest.java
armyvideo/src/main/: AndroidManifest.xml
armyvideo/src/main/cpp/: play.cpp
armyvideo/src/main/java/com/demo/armyvideo/: MainActivity.java  VideoPlay.java
armyvideo/src/main/res/values/: strings.xml
armyvideo/src/test/java/com/demo/armyvideo/: ExampleUnitTest.java
ceshi/: build.gradle
ceshi/src/androidTest/java/com/demo/ceshi/: ExampleInstrumentedTest.java
ceshi/src/main/: AndroidManifest.xml
ceshi/src/main/java/com/demo/ceshi/: MainActivity.java  Play.java  VideoView.java
ceshi/src/main/res/layout/: activity_main.xml
ceshi/src/main/res/values/: strings.xml
ceshi/src/test/java/com/demo/ceshi/: ExampleUnitTest.java
mandv/: CMakeLists.txt  build.gradle
mandv/src/androidTest/java/com/demo/mandv/: ExampleInstrumentedTest.java
mandv/src/main/: AndroidManifest.xml
mandv/src/main/cpp/: native-lib.cpp
mandv/src/main/java/com/demo/mandv/: MainActivity.java  Play.java  VideoView.java
mandv/src/main/res/layout/: activity_main.xml
mandv/src/main/res/values/: strings.xml
mandv/src/test/java/com/demo/mandv/: ExampleUnitTest.java
music/: CMakeLists.txt  build.gradle
music/src/androidTest/java/com/demo/music/: ExampleInstrumentedTest.java
music/src/main/: AndroidManifest.xml
music/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  native-lib.cpp
music/src/main/java/com/demo/music/: MainActivity.java  MusicPlay.java
music/src/test/java/com/demo/music/: ExampleUnitTest.java
x86rmusic/: CMakeLists.txt  build.gradle
x86rmusic/src/androidTest/java/com/demo/x86rmusic/: ExampleInstrumentedTest.java
x86rmusic/src/main/: AndroidManifest.xml
x86rmusic/src/main/cpp/: FFmpegMusic.cpp  native-lib.cpp
x86rmusic/src/main/java/com/demo/x86rmusic/: MainActivity.java  MusicPlay.java
x86rmusic/src/main/res/layout/: activity_main.xml
x86rmusic/src/main/res/values/: strings.xml
x86rmusic/src/test/java/com/demo/x86rmusic/: ExampleUnitTest.java
x86rvideo/: CMakeLists.txt  build.gradle
x86rvideo/src/androidTest/java/com/demo/x86rvideo/: ExampleInstrumentedTest.java
x86rvideo/src/main/: AndroidManifest.xml
x86rvideo/src/main/cpp/: player.cpp
x86rvideo/src/main/java/com/demo/x86rvideo/: MainActivity.java  Player.java
x86rvideo/src/main/res/values/: strings.xml
x86rvideo/src/test/java/com/demo/x86rvideo/: ExampleUnitTest.java
x86rvm/: CMakeLists.txt  build.gradle
x86rvm/src/androidTest/java/com/demo/x86vm/: ExampleInstrumentedTest.java
x86rvm/src/main/: AndroidManifest.xml
x86rvm/src/main/cpp/: native-lib.cpp
x86rvm/src/main/java/com/demo/x86vm/: MainActivity.java  Play.java  VideoView.java
x86rvm/src/main/res/values/: strings.xml
x86rvm/src/test/java/com/demo/x86vm/: ExampleUnitTest.java
x86yvideo/: build.gradle
x86yvideo/src/androidTest/java/com/demo/x86yvideo/: ExampleInstrumentedTest.java
x86yvideo/src/main/: AndroidManifest.xml
x86yvideo/src/main/cpp/: play.cpp
x86yvideo/src/main/java/com/demo/x86yvideo/: MainActivity.java  VideoPlayer.java
x86yvideo/src/main/res/layout/: activity_main.xml
x86yvideo/src/main/res/values/: strings.xml
x86yvideo/src/test/java/com/demo/x86yvideo/: ExampleUnitTest.java
y39music/: CMakeLists.txt  build.gradle
y39music/src/androidTest/java/com/demo/y39music/: ExampleInstrumentedTest.java
y39music/src/main/: AndroidManifest.xml
y39music/src/main/cpp/: FFmpegMusic.cpp  native-lib.cpp
y39music/src/main/java/com/demo/y39music/: MainActivity.java  MusicPlay.java
y39music/src/main/res/values/: strings.xml
y39music/src/test/java/com/demo/y39music/: ExampleUnitTest.java
y39video/: CMakeLists.txt  build.gradle
y39video/src/androidTest/java/com/demo/y39video/: ExampleInstrumentedTest.java
y39video/src/main/: AndroidManifest.xml
y39video/src/main/cpp/: play.cpp
y39video/src/main/java/com/demo/y39video/: MainActivity.java  VideoPlay.java
y39video/src/main/res/values/: strings.xml
y39video/src/test/java/com/demo/y39video/: ExampleUnitTest.java
y39videoandmusic/: CMakeLists.txt  build.gradle
y39videoandmusic/src/androidTest/java/com/demo/y39videoandmusic/: ExampleInstrumentedTest.java
y39videoandmusic/src/main/: AndroidManifest.xml
y39videoandmusic/src/main/cpp/: native-lib.cpp
y39videoandmusic/src/main/java/com/demo/y39videoandmusic/: MainActivity.java  Play.java
y39videoandmusic/src/main/res/values/: strings.xml
y39videoandmusic/src/test/java/com/demo/y39videoandmusic/: ExampleUnitTest.java
y402video/: CMakeLists.txt  build.gradle
y402video/src/androidTest/java/com/example/y402video/: ExampleInstrumentedTest.java
y402video/src/main/: AndroidManifest.xml
y402video/src/main/cpp/: play.cpp
y402video/src/main/java/com/example/y402video/: MainActivity.java  VideoPlay.java
y402video/src/main/res/layout/: activity_main.xml
y402video/src/main/res/values/: strings.xml
y402video/src/test/java/com/example/y402video/: ExampleUnitTest.java
y40video/: build.gradle
y40video/src/main/: AndroidManifest.xml
y40video/src/main/cpp/: play.cpp
y40video/src/main/res/layout/: activity_main.xml
y40video/src/main/res/values/: strings.xml
y46ffandopen/: CMakeLists.txt  build.gradle
y46ffandopen/src/main/: AndroidManifest.xml
y46ffandopen/src/main/cpp/: player.h  surface.cpp
y46ffandopen/src/main/res/layout/: activity_main.xml
y46ffandopen/src/main/res/values/: strings.xml
y46video/: build.gradle
y46video/src/main/: AndroidManifest.xml
y46video/src/main/cpp/: play.cpp
y46video/src/main/res/values/: strings.xml
(+12 files in other folders)
